src/styles/style.css
@font-face {
  font-family: "Montserrat";
  src: url(../assets/fonts/Montserrat-Regular.ttf);
}

:root {
  --primary-color: #5281ce;
  --secondary-color: #ff9a9f;
  --tertiary-color: #39c56a;

  --text-color: #fbfbfb;
  --text-secondary-color: #bfbfd4;
  --text-tertiary-color: #7f7f98;

  --text-dark: #212427;

  --primary-font-regular: "Montserrat", sans-serif;
  --heading-font-bold: "Helvetica", sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 6.25%;
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16rem;
  color: var(--text-dark);
  font-family: var(--primary-font-regular);
}

#root {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.entry-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  background-image: url(../assets/img/background.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.resume-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../assets/img/background.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.container-left {
  width: 100%;
  height: 100%;
  padding: 50px;
  display: flex;
  justify-content: baseline;
  align-items: center;
  gap: 15px;
  flex-direction: column;
}

.container-right {
  width: 100%;
  height: 100%;
  background-color: #656e83;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.resume {
  background-color: white;
  height: 90%;
  max-width: 498px;
  max-height: 701px;
  aspect-ratio: 1 / 1.4142;
  border-radius: 8px;
}

.header,
.footer {
  font-size: 17rem;
}

.header {
  margin-top: 25px;
}

.footer {
  display: flex;
  gap: 5px;
  justify-content: center;
  align-items: center;
  margin-bottom: 25px;
}

a {
  text-decoration: none;
  color: var(--text-dark);
}

.github-logo {
  width: 22px;
  height: 22px;
  background-image: url(../assets/img/github-logo.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.entry-main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 9%;
}

.start-btn {
  margin-top: 40px;
  appearance: none;
  border: none;
  outline: none;
  font-size: 23rem;
  border-radius: 20px;
  padding: 16px 60px;
  background-color: var(--tertiary-color);
  color: var(--text-color);
  transition: all 200ms ease-in-out;
  cursor: pointer;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  font-family: var(--primary-font-regular);
  font-weight: 600;
}

.start-btn:hover {
  transform: scale(1.1);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.heading-text {
  font-weight: 1000;
  font-family: var(--heading-font-bold);
  font-size: 75rem;
  margin-bottom: 8px;
}

.heading-subtext {
  font-size: 25rem;
}

.dropdown {
  background-color: white;
  width: 100%;
  height: 70px;
  border-radius: 15px;
  padding: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  position: relative;
}

.dropdown-left {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.dropdown-right {
  display: flex;
  justify-content: center;
  align-items: center;
}

.caret {
  width: 20px;
  height: 20px;
  background-image: url(../assets/img/caret.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.user-icon {
  width: 20px;
  height: 20px;
  background-image: url(../assets/img/user.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.education-icon {
  width: 20px;
  height: 20px;
  background-image: url(../assets/img/education.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.experience-icon {
  width: 20px;
  height: 20px;
  background-image: url(../assets/img/experience.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.dropdown-text {
  font-size: 18rem;
  font-weight: bold;
}

.nav-bar {
  width: 100%;
  height: 70px;
  background-color: white;
  border-radius: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  margin-bottom: 10px;
}

.nav-right {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
}

.logo {
  padding: 5px 10px;
  font-weight: 1000;
  font-family: var(--heading-font-bold);
  border-radius: 6px;
  font-size: 20rem;
}

.clear-btn {
  padding: 6px 20px;
  appearance: none;
  border: none;
  border-radius: 6px;
  font-size: 16rem;
  background-color: #f7665f;
  cursor: pointer;
  color: var(--text-color);
}

.download-btn {
  padding: 6px 20px;
  appearance: none;
  border: none;
  border-radius: 6px;
  font-size: 16rem;
  background-color: var(--tertiary-color);
  cursor: pointer;
  color: var(--text-color);
}

.personal-details {
  width: 100%;
  background-color: white;
  transform: translateY(-26px);
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
  padding: 10px 20px 40px 20px;
}

.display-block {
  display: block;
}

.flex {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.pb-5 {
  padding-bottom: 25px;
}

.input-field {
  flex: 1;
}

.personal-details input {
  width: 100%;
}

.input-styling {
  padding: 9px;
  outline: none;
  border-radius: 6px;
  border: none;
  background-color: #eeeeee;
  margin-top: 5px;
  font-size: 16rem;
  transition: border 300ms ease-in-out;
  border: 2px solid transparent;
}

.input-styling:focus {
  border: 2px solid var(--tertiary-color);
}

/*Media Queries*/

/* Phones */
@media only screen and (max-width: 767px) {
  .entry-container {
    padding: 0px 15px;
  }
  .heading-text {
    font-size: 55rem;
    text-align: center;
    margin-bottom: 15px;
  }
  .heading-subtext {
    font-size: 18rem;
    text-align: center;
  }
  .entry-main {
    margin-bottom: 50%;
  }
}

/* Tablets */
@media only screen and (min-width: 768px) and (max-width: 1023px) {
  /* Your styles for tablets go here */
}

